first section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,18 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+.btn-color{
+    color: #3F87F5 !important;
+}
+.font-weight{
+    font-weight: 500 !important;
+    
+}
+.font-sizing{
+    font-size: 15px !important;
+    font-style: normal !important;
+    }
+    /* first section end */
+
+    /* second section */
+    
