--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ left: 225px;
 .position-toast{
     position: absolute;
     right: 300px;
-    top: 725px;
+    top: 775px;
 }
 
 @media only screen and (max-width:500px) {
@@ -79,7 +79,7 @@ left: 225px;
 .position-toast{
     position: absolute;
     right: 8px;
-    top: 430px;
+    top: 480px;
 }
 
 
@@ -97,7 +97,7 @@ left: 225px;
     .position-toast{
         position: absolute;
         right: 60px;
-        top: 550px;
+        top: 580px;
 }
 .for-resp{
 
@@ -107,3 +107,9 @@ font-size: 15px
 }
 
 /* second section end */
+
+/* third section start */
+
+.bg-card{
+    background-color: rgb(245, 245, 245);
+}
