last section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -113,3 +113,10 @@ font-size: 15px
 .bg-card{
     background-color: rgb(245, 245, 245);
 }
+/* third section end */
+
+/* forth section start */
+
+.width-mehu{
+    width: 90%;
+}
