--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,11 @@ body{
     font-weight: 500 !important;
     
 }
+.text-issue{
+    color: rgb(0, 0, 0);
+    background-color: rgba(185, 185, 185, 0.466);
+    
+}
 .font-sizing{
     font-size: 15px !important;
     font-style: normal !important;
@@ -82,8 +87,6 @@ left: 225px;
     top: 480px;
 }
 
-
-
 }
 @media only screen and (min-width: 501px) and (max-width:970px ) {
     .box-issue{
@@ -120,3 +123,20 @@ font-size: 15px
 .width-mehu{
     width: 90%;
 }
+/* forth section end */
+/* footer */
+
+.bg-mehu{
+    background: #0B0D17;
+    width: 100%;
+    height: 300px;
+}
+.btn-clr{
+    background: #000000;
+    border-radius: 10px
+    ;
+    width: 180px;
+    height: 50px;
+}
+
+/* footer end */
